测试延迟加载

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,12 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 mybatis.mapper-locations=classpath:/mybatis/*.xml
 
+#延迟加载开关
+mybatis.configuration.lazy-loading-enabled=true
+#消极加载（按需加载）
+mybatis.configuration.aggressive-lazy-loading=false
+
+
 #mybatis sql information
 logging.level.readingList.mapper=debug
 
