--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ mybatis.mapper-locations=classpath:/mybatis/*.xml
 mybatis.configuration.lazy-loading-enabled=true
 #消极加载（按需加载）
 mybatis.configuration.aggressive-lazy-loading=false
-
+mybatis.configuration.cache-enabled=true
 
 #mybatis sql information
 logging.level.readingList.mapper=debug
