--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,8 @@ mybatis.mapper-locations=classpath:/mybatis/*.xml
 mybatis.configuration.lazy-loading-enabled=true
 #消极加载（按需加载）
 mybatis.configuration.aggressive-lazy-loading=false
-mybatis.configuration.cache-enabled=true
+#开启二级缓存
+#mybatis.configuration.cache-enabled=true
 
 #mybatis sql information
 logging.level.readingList.mapper=debug
@@ -27,3 +28,7 @@ logging.level.readingList.mapper=debug
 
 # close cache
 #spring.thymeleaf.cache=false
+
+logging.level.readingList=debug
+logging.path=logs/
+logging.file=myLog.log
