--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,13 +22,10 @@ mybatis.configuration.aggressive-lazy-loading=false
 #开启二级缓存
 #mybatis.configuration.cache-enabled=true
 
-#mybatis sql information
-logging.level.readingList.mapper=debug
-
-
 # close cache
 #spring.thymeleaf.cache=false
 
+logging.level.root=info
 logging.level.readingList=debug
 logging.path=logs/
 logging.file=myLog.log
