--- a/pom.xml
+++ b/pom.xml
@@ -86,9 +86,13 @@
 		    <artifactId>spring-boot-devtools</artifactId>
 		    <optional>true</optional>
 		    <scope>true</scope>
-		</dependency>	 	
-			 	
-			 	
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
