--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,11 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 mybatis.mapper-locations=classpath:/mybatis/*.xml
 
-#延迟加载开关
+#\u5ef6\u8fdf\u52a0\u8f7d\u5f00\u5173
 mybatis.configuration.lazy-loading-enabled=true
-#消极加载（按需加载）
+#\u6d88\u6781\u52a0\u8f7d\uff08\u6309\u9700\u52a0\u8f7d\uff09
 mybatis.configuration.aggressive-lazy-loading=false
-#开启二级缓存
+#\u5f00\u542f\u4e8c\u7ea7\u7f13\u5b58
 #mybatis.configuration.cache-enabled=true
 
 # close cache
@@ -29,3 +29,5 @@ logging.level.root=info
 logging.level.readingList=debug
 logging.path=logs/
 logging.file=myLog.log
+
+spring.cache.type=Simple
