simple cache 试验

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8080
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/DBbook?useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -30,4 +30,4 @@ logging.level.readingList=debug
 logging.path=logs/
 logging.file=myLog.log
 
-spring.cache.type=Simple
+spring.cache.type=simple
