--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<fastjson.version>1.2.15</fastjson.version>
+		<bootstrap.version>3.3.5</bootstrap.version>
+		<jq.version>3.1.1</jq.version>
+		<mybatis.version>1.2.2</mybatis.version>
+		<mybatis.redis.version>1.0.0-beta2</mybatis.redis.version>
 	</properties>
 
 	<dependencies>
@@ -51,17 +56,17 @@
 		<dependency>
      		<groupId>com.alibaba</groupId>
      		<artifactId>fastjson</artifactId>
-     		<version>1.2.15</version>
+     		<version>${fastjson.version}</version>
 	 	</dependency>
 	 	<dependency>  
             <groupId>org.webjars</groupId>  
             <artifactId>bootstrap</artifactId>  
-            <version>3.3.5</version>  
+            <version>${bootstrap.version}</version>  
         </dependency>  
         <dependency>  
             <groupId>org.webjars</groupId>  
             <artifactId>jquery</artifactId>  
-            <version>3.1.1</version>  
+            <version>${jq.version}</version>  
         </dependency> 
         
         <!-- mysql -->
@@ -77,7 +82,7 @@
 		<dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.2.2</version>
+            <version>${mybatis.version}</version>
         </dependency>
 			 	
 		<!-- 热部署 -->
@@ -96,7 +101,7 @@
 		<dependency>
 			<groupId>org.mybatis.caches</groupId>
 			<artifactId>mybatis-redis</artifactId>
-			<version>1.0.0-beta2</version>
+			<version>${mybatis.redis.version}</version>
 		</dependency>
 	</dependencies>
 
