--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<name>ReadingList</name>
 	<description>Demo project for Spring Boot</description>
-
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -103,6 +103,13 @@
 			<artifactId>mybatis-redis</artifactId>
 			<version>${mybatis.redis.version}</version>
 		</dependency>
+		
+		<dependency>
+		  <groupId>com.wisely</groupId>
+		  <artifactId>spring-boot-starter-dictionary</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
