--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
+  #格式化输出json
+  jackson:
+    serialization:
+      indent-output: true      
 server:
   port: 8081
 mybatis:
