--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,11 @@
 		  <artifactId>spring-boot-starter-dictionary</artifactId>
 		  <version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
