--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   cache:
     type: simple
   datasource:
-    url: jdbc:mysql://localhost:3306/DBbook?useSSL=false&useUnicode=true&characterEncoding=UTF-8
-    username: root
+    url: jdbc:mysql://67.209.187.223:3306/dbbook?useSSL=false&useUnicode=true&characterEncoding=UTF-8
+    username: admin
     password: admin
     driverClassName: com.mysql.jdbc.Driver
   jpa:
@@ -25,7 +25,7 @@ mybatis:
   configuration:
     lazy-loading-enabled: true
     aggressive-lazy-loading: false
-    cache-enabled: true
+    cache-enabled: false
   mapper-locations: classpath:/mybatis/*.xml
   type-aliases-package: readingList.domain
 logging:
