--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+
   cache:
     type: simple
   datasource:
@@ -21,6 +22,8 @@ spring:
       indent-output: true
 server:
   port: 8081
+#  servlet:
+#          context-path: /rb
 mybatis:
   configuration:
     lazy-loading-enabled: true
