--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 		<fastjson.version>1.2.15</fastjson.version>
 		<bootstrap.version>3.3.5</bootstrap.version>
 		<jq.version>3.1.1</jq.version>
-		<mybatis.version>1.2.2</mybatis.version>
-		<mybatis.redis.version>1.0.0-beta2</mybatis.redis.version>
+<!--		<mybatis.version>1.2.2</mybatis.version>
+		<mybatis.redis.version>1.0.0-beta2</mybatis.redis.version>-->
 	</properties>
 
 	<dependencies>
@@ -79,11 +79,11 @@
 		  <artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 		<!-- mybatis -->
-		<dependency>
+<!--		<dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis.version}</version>
-        </dependency>
+        </dependency>-->
 			 	
 		<!-- 热部署 -->
 		<dependency>
@@ -98,11 +98,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.mybatis.caches</groupId>
 			<artifactId>mybatis-redis</artifactId>
 			<version>${mybatis.redis.version}</version>
-		</dependency>
+		</dependency>-->
 		
 <!--		<dependency>
 		  <groupId>com.wisely</groupId>
@@ -124,6 +124,13 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.0.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
