--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,11 +24,11 @@ server:
   port: 8081
 #  servlet:
 #          context-path: /rb
-mybatis:
+mybatis-plus:
   configuration:
-    lazy-loading-enabled: true
-    aggressive-lazy-loading: false
+    map-underscore-to-camel-case: true
     cache-enabled: false
+    call-setters-on-nulls: true
   mapper-locations: classpath:/mybatis/*.xml
   type-aliases-package: readingList.domain
 logging:
